--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
 
 <li class="nav-item dropdown megamenu">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             What we do
+             Products
             </a>
 
             <div class="dropdown-menu-sm ml-lg-1">
@@ -65,47 +65,6 @@
                                     Cards
                                 </a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/collapse.html">
-                                    Collapse
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/countdown.html">
-                                    Countdown
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/dropdown.html">
-                                    Dropdowns
-                                </a>
-                            </li>
-
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/forms.html">
-                                    Forms
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/instagram.html">
-                                    Instagram
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/lightbox.html">
-                                    Lightbox
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/maps.html">
-                                    Maps
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/masonry.html">
-                                    Masonry
-                                </a>
-                            </li>
                         </ul>
                     </div>
 
@@ -134,46 +93,7 @@
                                     Section titles
                                 </a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/forms.html#ex_component_sliders">
-                                    Sliders
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/tabs.html">
-                                    Tabs
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/components/typed-animations.html">
-                                    Typed animations
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/headers.html">
-                                    Headers
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="https://preview.webpixels.io/boomerang-v3.6.1/html/default/sliders/boomerang-slider/index.html">
-                                    Boomerang slider
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="https://preview.webpixels.io/boomerang-v3.6.1/html/default/sliders/revolution-slider/index.html">
-                                    Revolution slider
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/footers.html">
-                                    Footers
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/hero.html">
-                                    Hero blocks
-                                </a>
-                            </li>
+                            
                         </ul>
                     </div>
 
@@ -202,44 +122,24 @@
                                     Product blocks
                                 </a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/real-estate.html">
-                                    Real-Estate blocks
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/team.html">
-                                    Team blocks
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/testimonials.html">
-                                    Testimonial blocks
-                                </a>
-                            </li>
-
-                            <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/comments.html">
-                                    Comment blocks
-                                </a>
-                            </li>
                      </ul>
                                     </div>
                                 </div>
             </div>
         </li>
-     
-        <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="{{ site.baseurl }}/pricing">
-              Pricing
-            </a>
-        </li>        
+          
      
      <li class="nav-item dropdown megamenu">
             <a class="nav-link" href="https://shop.everpayinc.com">
               Shop
             </a>
         </li>   
+     
+ <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="{{ site.baseurl }}/pricing/">
+            Pricing
+            </a>
+        </li>       
      
      <li class="nav-item dropdown">
             <a href="top#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -262,19 +162,19 @@
                     </a>
                     <a href="../../pages-profile.html" class="list-group-item list-group-item-action d-flex align-items-center">
                         <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Profile pages</div>
+                            <div class="list-group-heading heading heading-6 mb-1">Careers</div>
                             <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
                         </div>
                     </a>
                     <a href="../../pages-blog.html" class="list-group-item list-group-item-action d-flex align-items-center">
                         <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Blog pages</div>
+                            <div class="list-group-heading heading heading-6 mb-1">Elektrolyte Blog</div>
                             <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
                         </div>
                     </a>
                     <a href="../../pages-shop.html" class="list-group-item list-group-item-action d-flex align-items-center">
                         <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Shop pages</div>
+                            <div class="list-group-heading heading heading-6 mb-1">Partnerships</div>
                             <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
                         </div>
                     </a>
