--- a/_includes/header.html
+++ b/_includes/header.html
@@ -128,68 +128,16 @@
             </div>
         </li>
           
-     
-     <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="https://shop.everpayinc.com">
-              Shop
-            </a>
-        </li>   
-     
  <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="{{ site.baseurl }}/pricing/">
+            <a class="nav-link" href="{{ site.baseurl }}/platform/">
             Pricing
             </a>
-        </li>       
+        </li>   
+   
      
-     <li class="nav-item dropdown">
-            <a href="top#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Company
-            </a>
-
-            <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_1_dropdown_1">
-                <div class="list-group rounded">
-                    <a href="{{ site.baseurl }}/about/" class="list-group-item list-group-item-action d-flex align-items-center">
-                        <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">About us</div>
-                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
-                        </div>
-                    </a>
-                    <a href="{{ site.baseurl }}/contact/" class="list-group-item list-group-item-action d-flex align-items-center">
-                        <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Contact us</div>
-                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
-                        </div>
-                    </a>
-                    <a href="../../pages-profile.html" class="list-group-item list-group-item-action d-flex align-items-center">
-                        <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Careers</div>
-                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
-                        </div>
-                    </a>
-                    <a href="../../pages-blog.html" class="list-group-item list-group-item-action d-flex align-items-center">
-                        <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Elektrolyte Blog</div>
-                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
-                        </div>
-                    </a>
-                    <a href="../../pages-shop.html" class="list-group-item list-group-item-action d-flex align-items-center">
-                        <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Partnerships</div>
-                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
-                        </div>
-                    </a>
-                    <a href="../../pages-real-estate.html" class="list-group-item list-group-item-action d-flex align-items-center">
-                        <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Real estate pages</div>
-                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
-                        </div>
-                    </a> 
-                </div>
-            </div>
-        </li>     
     
 <li class="nav-item dropdown megamenu">
-            <a class="nav-link dropdown-toggle" href="homepage-recruitment-1.html#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Resources
             </a>
 
@@ -406,6 +354,53 @@
                 </div>
             </div>
      </li>
+     
+ <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="{{ site.baseurl }}/pricing/">
+            Pricing
+            </a>
+</li>       
+     
+     <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Company
+            </a>
+
+            <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_1_dropdown_1">
+                <div class="list-group rounded">
+                    <a href="{{ site.baseurl }}/about/" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">About us</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="{{ site.baseurl }}/contact/" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Contact us</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="../../pages-profile.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Careers</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="https://blog.everpayinc.com" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Elektrolyte Blog</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="https://partners.everpayinc.com" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Partnerships</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </li>     
  </ul>
             
    <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
