--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col-lg-6 pt-5">
                     <h3 class="heading display-4 strong-400 c-white">
-                     {{ page.title }
+                     {{ page.title }}
                     </h3>
                     <p class="text-lg line-height-1_8 c-white mt-4">
                      {{ page.description }}
