--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,6 @@
-
-                  
+---
+layout: default
+---                  
 <section class="slice slice--offset-top bg-base-1" style="padding-bottom: 250px;">
         <div class="container">
             <div class="row">
@@ -8,7 +9,8 @@
                      {{ page.title }}
                     </h3>
                     <p class="text-lg line-height-1_8 c-white mt-4">
-                    </p>                                   
+                      {{ page.description }}                 
+                  </p>                                   
                 </div>
             </div>
         </div>
