--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -28,7 +28,7 @@
                         <div class="container relative">
                             <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center text-left">
                                 <div class="col-lg-5 col-md-6">
- <h1 class="heading heading-responsive heading-1 strong-500 c-white">{{ page.title }</h1>
+ <h1 class="heading heading-responsive heading-1 strong-500 c-white">{{ page.title }}</h1>
         <p class="lead line-height-1_8 strong-300 mt-4 c-white">{{ page.description }}</p>         
          <a href="#" class="btn btn-styled btn-white btn-circle mt-5">Read the story</a>
                                 </div>
