--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <div class="st-content">
                 <div class="st-content-inner">
 
-  <div id="site-header" class="header site-header everpayTopHeader-processed is-sticky" role="banner" aria-label="Site-Header">
+  <div id="site-header" class="site-header" role="banner" aria-label="Site-Header">
     {% include header.html %}
   </div>
                       
