--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
              Products
             </a>
 
-            <div class="dropdown-menu-sm ml-lg-1">
+            <div class="dropdown-menu ml-lg-1">
                 <div id="features-dropdown" class="mega-dropdown-menu features justify-content-around col-sm-12 row-fluid row-no-padding" style="width:600px;">
                  <div class="row">
                                             
@@ -130,11 +130,54 @@
           
  <li class="nav-item dropdown megamenu">
             <a class="nav-link" href="{{ site.baseurl }}/platform/">
-            Pricing
+            Platform
             </a>
         </li>   
    
-     
+ <li class="nav-item dropdown megamenu">
+<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           Solutions
+            </a>
+  
+ <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_1_dropdown_1">
+                <div class="list-group rounded">
+                    <a href="{{ site.baseurl }}/about/" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">About us</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="{{ site.baseurl }}/contact/" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Contact us</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="../../pages-profile.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Careers</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="https://blog.everpayinc.com" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Elektrolyte Blog</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="https://partners.everpayinc.com" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Partnerships</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </li>       
+  
+  
+  
+        </li>   
     
 <li class="nav-item dropdown megamenu">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -366,7 +409,7 @@
           Company
             </a>
 
-            <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_1_dropdown_1">
+            <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_2_dropdown_2">
                 <div class="list-group rounded">
                     <a href="{{ site.baseurl }}/about/" class="list-group-item list-group-item-action d-flex align-items-center">
                         <div class="list-group-content">
