--- a/_includes/header.html
+++ b/_includes/header.html
@@ -457,11 +457,11 @@
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
-     <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-success text-uppercase btn-circle mr-2">
+     <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-light text-uppercase btn-circle mr-2" target="_blank">
        Login 
       </a>
  
-    <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
+    <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle" target="_blank">
         Get Started    
  </a>
 </div>
