--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar--bold navbar-transparent navbar-inverse bg-dark">
+ <nav class="navbar navbar-expand-lg navbar-transparent navbar-inverse bg-dark">
         <div class="container container-lg navbar-container">
                 
           <a class="navbar-brand" href="{{ site.baseurl }}/">
@@ -36,7 +36,7 @@
             </a>
 
             <div class="dropdown-menu products ml-lg-1" style="width:600px;">
-                <div id="features-dropdown" class="mega-dropdown-menu products justify-content-around col-sm-12 row-fluid row-no-padding">
+                <div id="features-dropdown" class="mega-dropdown-menu justify-content-around col-sm-12 row-fluid row-no-padding">
                  <div class="row">
                                             
                     <div class="col-md-4 col-lg-4">
