--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
              Products
             </a>
 
-            <div class="dropdown-menu products ml-lg-1" style="width:600px;">
+            <div class="dropdown-menu-md dropdown-menu--left ml-lg-1" style="width:600px;">
                 <div id="features-dropdown" class="mega-dropdown-menu justify-content-around col-sm-12 row-fluid row-no-padding">
                  <div class="row">
                                             
