--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,13 +30,13 @@
     <!-- Navbar links -->
     <ul class="navbar-nav">
 
-<li class="nav-item dropdown megamenu">
+<li class="nav-item dropdown-md megamenu">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
              Products
             </a>
 
-            <div class="dropdown-menu ml-lg-1" style="width:600px;">
-                <div id="features-dropdown" class="mega-dropdown-menu justify-content-around products col-sm-12 row-no-padding">
+            <div class="dropdown-menu ml-lg-1" style="width:600px;left:6%!;">
+                <div id="features-dropdown" class="mega-dropdown-menu justify-content-around col-sm-12 row-no-padding">
                  <div class="row">
                                             
                     <div class="col-md-4 col-lg-4">
