--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <div class="row cols-xs-space cols-sm-space cols-md-space">
                 <div class="col-lg-4">
                     <div class="col">
-                        <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png">
+                        <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png" class="logo-delimiter">
                         <span class="clearfix mt-2"></span>
                         <span class="heading heading-sm c-gray-light strong-400">One Company. Infinite solutions.</span>
                         <p class="mt-2">
