--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -275,3 +275,5 @@
 
 <!-- App JS -->
 <script src="{{ "/assets/js/boomerang.min.js" | prepend: site.baseurl }}"></script>
+
+<script src="{{ "/assets/js/everpay.min.js" | prepend: site.baseurl }}"></script>
