--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar-transparent navbar-inverse bg-dark fixed-top" id="mainNav"
+ <nav class="navbar navbar-expand-lg navbar-transparent navbar-inverse bg-dark fixed-top" id="mainNav">
         <div class="container container-lg navbar-container">
                 
           <a class="navbar-brand" href="{{ site.baseurl }}/">
