--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
 
 <li class="nav-item dropdown-md megamenu">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             Products
+             Why Us?
             </a>
 
             <div class="dropdown-menu ml-lg-1" style="width:600px;left:6%!;">
