--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,23 +45,23 @@
                            Maximize Revenue
                                             </h5>                            
                          <li>
-                                <a class="dropdown-item" href="../../documentation/components/alerts.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Alerts
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/components/badges.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Careers
                                    <span class="badge badge-pill bg-base-2">We're Hiring</span>                                  
                              </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/components/buttons.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Buttons
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/components/cards.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Cards
                                 </a>
                             </li>
@@ -74,22 +74,22 @@
                            Expand Your Reach
                                             </h5>                            
                          <li>
-                                <a class="dropdown-item" href="../../documentation/components/pagination.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Pagination
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/components/progress.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Progress bars
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/components/recaptcha.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Recaptcha
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/content/titles.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Section titles
                                 </a>
                             </li>
@@ -103,22 +103,22 @@
                            Boost Productivity
                          </h5>                              
                          <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/icon.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Icon blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/jobs.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Job blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/pricing.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Pricing blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="../../documentation/blocks/product.html">
+                                <a class="dropdown-item" href="{{ site.baseurl }}/#/">
                                     Product blocks
                                 </a>
                             </li>
@@ -127,12 +127,6 @@
                                 </div>
             </div>
         </li>
-          
- <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="{{ site.baseurl }}/platform/">
-            Platform
-            </a>
-        </li>   
    
  <li class="nav-item dropdown megamenu">
 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
