--- a/_includes/header.html
+++ b/_includes/header.html
@@ -417,7 +417,7 @@
                             <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
                         </div>
                     </a>
-                    <a href="../../pages-profile.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                    <a href="{{ site.baseurl }}/#/" class="list-group-item list-group-item-action d-flex align-items-center">
                         <div class="list-group-content">
                             <div class="list-group-heading heading heading-6 mb-1">Careers</div>
                             <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
@@ -451,7 +451,7 @@
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
-     <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-light text-uppercase btn-circle mr-2" target="_blank">
+     <a href="#" class="btn btn-styled btn-icon-right btn-sm btn-outline-light text-uppercase btn-circle mr-2" target="_blank">
        Login 
       </a>
  
