--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -219,6 +219,9 @@
 <!-- SCRIPTS -->
 <a href="top#" class="back-to-top btn-back-to-top"></a>
 
+<script
+  src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.14.0/js/okta-sign-in.min.js"
+  type="text/javascript"></script>
 <!-- Core -->
 <script src="{{ "/assets/vendor/jquery/jquery.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/vendor/popper/popper.min.js" | prepend: site.baseurl }}"></script>
