--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,16 +23,13 @@
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/ecommerce/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/software/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 
- <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700" rel="stylesheet">  
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700">  
 <link id="stylesheet" href="{{ "/assets/css/boomerang-startup-agency.min.css" | prepend: site.baseurl }}" type="text/css" rel="stylesheet" media="screen">
 <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
-<link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.14.0/css/okta-sign-in.min.css" type="text/css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.14.0/css/okta-sign-in.min.css" type="text/css">
 
 <!-- Theme file: Customize or replace this file if you want to override our default styles -->
-<link
-  href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.14.0/css/okta-theme.css"
-  type="text/css"
-  rel="stylesheet"/>  
+<link rel="stylesheet" href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.14.0/css/okta-theme.css" type="text/css">  
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
