--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 <title>{% if page.title %}{{ page.title }}{% else %} | {{ site.title }} | Payments Remastered{% endif %}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <link href="{{ "/assets/images/favicon.png" | prepend: site.baseurl }}" rel="icon" type="image/png">
-
+<script src="https://kit.fontawesome.com/9c9b4af13b.js"></script>
 <link rel="stylesheet" href="{{ "/assets/vendor/bootstrap/css/bootstrap.min.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/vendor/swiper/css/swiper.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/assets/vendor/hamburgers/hamburgers.min.css" | prepend: site.baseurl }}" type="text/css">
@@ -17,7 +17,6 @@
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons/line-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons-pro/line-icons-pro.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/budicons/budicon.css" | prepend: site.baseurl }}" type="text/css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/arrows/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/basic/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/ecommerce/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
