--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="google-site-verification" content="">
 <meta name="google-analytics" content="UA-20603888-1">
-<title>{% if page.title %}{{ page.title }}{% else %} | {{ site.title }} | Payments Remastered{% endif %}</title>
+<title>{% if page.title %}{{ page.title }}{% else %} {{ site.title }}{% endif %} | Payments Remastered</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <link href="{{ "/assets/images/favicon.png" | prepend: site.baseurl }}" rel="icon" type="image/png">
 <script src="https://kit.fontawesome.com/9c9b4af13b.js"></script>
