--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -1,5 +1,6 @@
 <!-- Hero Section -->
-    <div class="gradient-overlay-half-primary-video-v1 bg-img-hero" style="background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg);">
+<section class="js-container background-image-holder">
+<div class="gradient-overlay-half-primary-video-v1 bg-img-hero" style="background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg);">
       <!-- Video Background -->
       <div class="js-bg-video d-none d-md-block position-absolute w-100 h-100"
            data-hs-bgv-type="youtube"
@@ -93,3 +94,5 @@
           </div>
         </div>
         <!-- End Content -->
+    </div>
+          </section>
