--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -99,7 +99,7 @@
 
       
 
-<section class="hidden js-container background-image-holder">
+<section class="js-container background-image-holder">
                         <div class="swiper-container" data-swiper-autoplay="false" data-swiper-effect="slide" data-swiper-items="0" data-swiper-space-between="0">
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
@@ -111,16 +111,16 @@
                                         <span class="mask mask-base-1--style-2 alpha-6"></span>
                                         <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
                                             <div class="col px-0 mt-5">
-                                                <div class="row cols-xs-space cols-sm-space cols-md-space mt-5">
-                                                    <div class="col-md-10 text-center text-lg-center align-self-center">
+                                                <div class="row cols-xs-space cols-sm-space cols-md-space justify-content-md-center w-100 mt-5">
+                                                    <div class="col-md-10 text-center text-lg-center align-self-center mt-5">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated mt-3" data-animation-in="fadeInDownBig" data-animation-delay="200">
                                                            Secure And Scale Your Business With Everpay
                                                         </h2>
-                                                        <p class="lead animated mt-4" data-animation-in="fadeInUpBig" data-animation-delay="200">
+                                                        <p class="lead animated mt-4 mb-5" data-animation-in="fadeInUpBig" data-animation-delay="200">
                                                             Everpay is an open payments company, focusing on simplifying payments and unifing big commerce under one single secure source.
                                                         </p>
                                                            <!-- Form -->
-                <form class="js-validate">
+                <form class="js-validate mb-4">
                   <div class="form-row mb-2">
                     <div class="col-sm-6 col-lg mb-2">
                       <div class="js-form-message">
@@ -153,7 +153,7 @@
                     </div>
 
                     <div class="col-sm-6 col-lg mb-2">
-                      <button type="submit" class="btn btn-block btn-white transition-3d-hover">Get Started</button>
+                      <button type="submit" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000">Get Started</button>
                     </div>
                   </div>
 
@@ -174,9 +174,6 @@
                 </form>
                 <!-- End Form -->
 
-                                                        <a href="#" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
-                                                            See what we do
-                                            </a>
                                                     </div>
                                                 </div>
                                             </div>
