--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -74,7 +74,7 @@
                   </div>
 
                   <!-- Checkbox -->
-                  <div class="js-form-message">
+                  <div class="js-form-message mb-5">
                     <div class="custom-control custom-checkbox text-muted">
                       <input type="checkbox" class="custom-control-input" id="termsCheckbox" name="termsCheckbox" required
                              data-msg="Please accept our Terms and Conditions.">
@@ -113,14 +113,14 @@
                                             <div class="col px-0 mt-5">
                                                 <div class="row cols-xs-space cols-sm-space cols-md-space justify-content-md-center w-100 mt-5">
                                                     <div class="col-md-10 text-center text-lg-center align-self-center mt-5">
-                                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated mt-3" data-animation-in="fadeInDownBig" data-animation-delay="200">
-                                                           Secure And Scale Your Business With Everpay
+                                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated mt-3 mb-3" data-animation-in="fadeInDownBig" data-animation-delay="200">
+                                                           Secure And Scale Your Business
                                                         </h2>
                                                         <p class="lead animated mt-4 mb-5" data-animation-in="fadeInUpBig" data-animation-delay="200">
                                                             Everpay is an open payments company, focusing on simplifying payments and unifing big commerce under one single secure source.
                                                         </p>
                                                            <!-- Form -->
-                <form class="js-validate mb-4">
+                <form class="js-validate mb-4 mt-3">
                   <div class="form-row mb-2">
                     <div class="col-sm-6 col-lg mb-2">
                       <div class="js-form-message">
@@ -152,13 +152,13 @@
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-lg mb-2">
-                      <button type="submit" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000">Get Started</button>
+                    <div class="col-sm-6 col-lg mb-3">
+                      <button type="submit" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated" data-animation-in="fadeInUpBig" data-animation-delay="1000">Get Started</button>
                     </div>
                   </div>
 
                   <!-- Checkbox -->
-                  <div class="js-form-message">
+                  <div class="js-form-message mb-5">
                     <div class="custom-control custom-checkbox text-muted">
                       <input type="checkbox" class="custom-control-input" id="termsCheckbox" name="termsCheckbox" required
                              data-msg="Please accept our Terms and Conditions.">
